# alavista

./: .env.example  .gitignore  02_architecture_overview.md  04_core_services.md  07_persona_framework.md  08_interfaces_and_tools.md  CONTRIBUTING.md  Dockerfile  LICENSE.note  README.md  docker-compose.yml  pyproject.toml  roadmap_part_1_phases_0-2.md  roadmap_part_5_phases_12-14.md
.claude/: settings.local.json
alavista/: __init__.py
alavista/agents/: __init__.py  run_service.py
alavista/api/: __init__.py
alavista/core/: __init__.py  chunking.py  config.py  container.py  corpus_store.py  ingestion_service.py  logging.py  models.py  run_store.py
alavista/graph/: __init__.py  extraction.py  graph_service.py  graph_store.py  models.py
alavista/ingestion/: __init__.py
alavista/interfaces/: __init__.py
alavista/mcp/: __init__.py
alavista/ontology/: __init__.py  ontology_v0.1.json  service.py
alavista/personas/: __init__.py  models.py  persona_base.py  persona_registry.py  persona_runtime.py
alavista/rag/: __init__.py  graph_rag_service.py  models.py
alavista/search/: __init__.py  bm25.py  search_service.py  tokenizer.py
alavista/vector/: __init__.py  vector_search_service.py
cli/: __init__.py  main.py
cli/commands/: corpora.py  graph.py  ingest.py  search.py
design-docs/: 01_product_overview.md  06_ontology_layer.md
docs/: 01_product_overview.md  02_architecture_overview.md  03_data_models.md  04_core_services.md  05_graph_layer.md  06_ontology_layer.md  07_persona_framework.md  08_interfaces_and_tools.md  PHASE_10-11_COMPLETED.md  PHASE_12_COMPLETED.md  PHASE_1_COMPLETED.md  PHASE_2_COMPLETED.md  PHASE_3_COMPLETED.md  PHASE_4_COMPLETED.md  PHASE_5_COMPLETED.md  PHASE_6_COMPLETED.md  PHASE_7_8_COMPLETED.md  PHASE_9_COMPLETED.md  refactors_analysis_profiles.md  refactors_naming_personas_to_profiles.md  roadmap_part_2_phases_3-5.md  roadmap_part_3_phases_6-8.md  roadmap_part_4_phases_9-11.md  roadmap_part_5_phases_12-14.md  ui_phase12_plan.md  wishlist.md
scripts/: embed_corpus.py  setup.sh
tests/: __init__.py  conftest.py  test_integration.py  test_smoke.py
ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
(+76 files in other folders)
